# cassie_interface

./: CMakeLists.txt  package.xml
cmake/: cassie_interface-extras.cmake.in
include/cassie_interface/: CassiePlugin.hpp  cassie_core_sim.h  cassie_in_t.h  cassie_out_t.h  cassie_user_in_t.h  udp.h
launch/: cassie_interface_hardware.launch  cassie_interface_simulated.launch  cassie_interface_walkqp_hardware.launch  cassie_interface_walkqp_simulated.launch  cassie_world.launch  ekf_test.launch
src/: CassiePlugin.cpp  cassie_interface_node.cpp  udp.c
